force-app/main/default/objects/Company__c/fields/of_Primary_Employees__c.field-meta.xml
<CustomField>
    <fullName>of_Primary_Employees__c</fullName>
    <formula>Number_of_Primary_Employees__c /  Number_of_All_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% of Primary Employees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>