force-app/main/default/objects/Company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Number_of_All_Employees__c</columns>
    <columns>Number_of_Primary_Employees__c</columns>
    <columns>of_Primary_Employees__c</columns>
    <columns>Address__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>